@@ -317,13 +317,16 @@ static UInt8 createEGLSurfaces(SRMConnector *connector)
             fbCount = c;
     }
 
-    while (srmListGetLength(bos) < fbCount && gbm_surface_has_free_buffers(data->connectorGBMSurface) > 0)
+    do
     {
         eglSwapBuffers(connector->device->eglDisplay,
                        data->connectorEGLSurface);
         bo = gbm_surface_lock_front_buffer(data->connectorGBMSurface);
-        srmListAppendData(bos, bo);
+
+        if (bo)
+            srmListAppendData(bos, bo);
     }
+    while (srmListGetLength(bos) < fbCount && gbm_surface_has_free_buffers(data->connectorGBMSurface) > 0 && bo);
 
     data->buffersCount = srmListGetLength(bos);
 
@@ -369,13 +372,16 @@ static UInt8 createEGLSurfaces(SRMConnector *connector)
     bos = srmListCreate();
     bo = NULL;
 
-    while (srmListGetLength(bos) < fbCount && gbm_surface_has_free_buffers(data->rendererGBMSurface) > 0)
+    do
     {
         eglSwapBuffers(connector->device->rendererDevice->eglDisplay,
                        data->rendererEGLSurface);
         bo = gbm_surface_lock_front_buffer(data->rendererGBMSurface);
-        srmListAppendData(bos, bo);
+
+        if (bo)
+            srmListAppendData(bos, bo);
     }
+    while (srmListGetLength(bos) < fbCount && gbm_surface_has_free_buffers(data->rendererGBMSurface) > 0 && bo);
 
     data->buffersCount = srmListGetLength(bos);
 
@@ -801,6 +807,9 @@ static void uninitialize(SRMConnector *connector)
 
 static UInt8 initialize(SRMConnector *connector)
 {
+    connector->allowModifiers = 1;
+
+retry:
     if (!eglBindAPI(EGL_OPENGL_ES_API))
     {
         SRMError("Failed to bind GLES API for device %s connector %d (ITSELF MODE).",
@@ -836,11 +845,22 @@ static UInt8 initialize(SRMConnector *connector)
     return 1;
 
 fail:
+
+    uninitialize(connector);
+
+    if (connector->allowModifiers)
+    {
+        SRMError("Failed to initialize device %s connector %d with explicit modifiers, falling back to implicit modifiers (PRIME MODE).",
+                 connector->device->name,
+                 connector->id);
+        connector->allowModifiers = 0;
+        goto retry;
+    }
+
     SRMError("Failed to initialize render mode PRIME for device %s connector %d.",
              connector->device->name,
              connector->id);
 
-    uninitialize(connector);
     return 0;
 }
 
